cats/k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cats-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cats-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - cats-gateway
  http:
  - match:
    - uri:
        exact: /cats
    route:
    - destination:
        host: cats-service
        port:
          number: 7002
