cats/k8s/resources-dev.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: cats-app  
  labels:
    app: cats-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: cats-app
        group: micro-pet
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: cats-config
            items:
            - key: config.properties
              path: config.properties
      containers:
        - name: cats
          image: localregistry:5000/micropet/cats:dev
          imagePullPolicy: Always
          ports:
            - name: cats
              containerPort: 7002
          livenessProbe:
            httpGet:
              port: 7002
              path: /liveness
            initialDelaySeconds: 10
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: 7002
              path: /readiness
            initialDelaySeconds: 10
            periodSeconds: 2
          volumeMounts:
            - name: config-volume
              mountPath: /config/
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: cats-service
  labels:
    app: cats-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: http-cats
      port: 7002
  selector:
    app: cats-app
    group: micro-pet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: cats-ingress
spec:
  rules:
    - host: k8s.mytanzu.xyz
      http:
        paths:
          - path: /cats
            backend:
              serviceName: cats-service
              servicePort: 7002
